--- a/src/frontend/LayoutViewer.ui
+++ b/src/frontend/LayoutViewer.ui
@@ -1,119 +1,134 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>LayoutViewer</class>
-    <widget class="QDialog" name="LayoutViewer">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>587</width>
-                <height>327</height>
-            </rect>
-        </property>
-        <property name="windowTitle">
-            <string>Dialog</string>
-        </property>
-        <layout class="QGridLayout" name="gridLayout">
-            <item row="0" column="0">
-                <widget class="QPushButton" name="viewNormal">
-                    <property name="text">
-                        <string>Normal View</string>
-                    </property>
-                    <property name="icon">
-                        <iconset resource="images.qrc">
-                            <normaloff>:/images/keyboard_layout.png</normaloff>:/images/keyboard_layout.png
-                        </iconset>
-                    </property>
-                    <property name="checkable">
-                        <bool>true</bool>
-                    </property>
-                    <property name="checked">
-                        <bool>true</bool>
-                    </property>
-                    <property name="autoExclusive">
-                        <bool>true</bool>
-                    </property>
-                </widget>
-            </item>
-            <item row="0" column="1">
-                <widget class="QPushButton" name="viewAltGr">
-                    <property name="text">
-                        <string>AltGr View</string>
-                    </property>
-                    <property name="icon">
-                        <iconset resource="images.qrc">
-                            <normaloff>:/images/keyboard_layout.png</normaloff>:/images/keyboard_layout.png
-                        </iconset>
-                    </property>
-                    <property name="checkable">
-                        <bool>true</bool>
-                    </property>
-                    <property name="checked">
-                        <bool>false</bool>
-                    </property>
-                    <property name="autoExclusive">
-                        <bool>true</bool>
-                    </property>
-                </widget>
-            </item>
-            <item row="0" column="2">
-                <widget class="QPushButton" name="buttomZoomIn">
-                    <property name="enabled">
-                        <bool>false</bool>
-                    </property>
-                    <property name="text">
-                        <string/>
-                    </property>
-                    <property name="icon">
-                        <iconset resource="images.qrc">
-                            <normaloff>:/images/zoom-in.png</normaloff>:/images/zoom-in.png
-                        </iconset>
-                    </property>
-                </widget>
-            </item>
-            <item row="0" column="3">
-                <widget class="QPushButton" name="buttonZoomOut">
-                    <property name="enabled">
-                        <bool>false</bool>
-                    </property>
-                    <property name="text">
-                        <string/>
-                    </property>
-                    <property name="icon">
-                        <iconset resource="images.qrc">
-                            <normaloff>:/images/zoom-out.png</normaloff>:/images/zoom-out.png
-                        </iconset>
-                    </property>
-                </widget>
-            </item>
-            <item row="0" column="4">
-                <widget class="QPushButton" name="buttonAboutLayout">
-                    <property name="text">
-                        <string>About Layout</string>
-                    </property>
-                </widget>
-            </item>
-            <item row="0" column="5">
-                <widget class="QPushButton" name="buttonClose">
-                    <property name="text">
-                        <string>Close</string>
-                    </property>
-                </widget>
-            </item>
-            <item row="1" column="0" colspan="6">
-                <widget class="QLabel" name="labelImage">
-                    <property name="frameShape">
-                        <enum>QFrame::StyledPanel</enum>
-                    </property>
-                    <property name="text">
-                        <string/>
-                    </property>
-                </widget>
-            </item>
-        </layout>
+ <class>LayoutViewer</class>
+ <widget class="QDialog" name="LayoutViewer">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>587</width>
+    <height>327</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Dialog</string>
+  </property>
+  <layout class="QGridLayout" name="gridLayout">
+   <property name="horizontalSpacing">
+    <number>13</number>
+   </property>
+   <property name="verticalSpacing">
+    <number>6</number>
+   </property>
+   <item row="0" column="3">
+    <widget class="QPushButton" name="buttonZoomOut">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="images.qrc">
+       <normaloff>:/images/zoom-out.png</normaloff>:/images/zoom-out.png</iconset>
+     </property>
     </widget>
-    <resources>
-        <include location="images.qrc"/>
-    </resources>
-    <connections/>
+   </item>
+   <item row="0" column="1">
+    <widget class="QPushButton" name="viewAltGr">
+     <property name="text">
+      <string>AltGr View</string>
+     </property>
+     <property name="icon">
+      <iconset resource="images.qrc">
+       <normaloff>:/images/keyboard_layout.png</normaloff>:/images/keyboard_layout.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+     <property name="autoExclusive">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="5">
+    <widget class="QPushButton" name="buttonAboutLayout">
+     <property name="text">
+      <string>About Layout</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="6">
+    <widget class="QPushButton" name="buttonClose">
+     <property name="text">
+      <string>Close</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="buttomZoomIn">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="images.qrc">
+       <normaloff>:/images/zoom-in.png</normaloff>:/images/zoom-in.png</iconset>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="7">
+    <widget class="QLabel" name="labelImage">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QPushButton" name="viewNormal">
+     <property name="text">
+      <string>Normal View</string>
+     </property>
+     <property name="icon">
+      <iconset resource="images.qrc">
+       <normaloff>:/images/keyboard_layout.png</normaloff>:/images/keyboard_layout.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <property name="autoExclusive">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="4">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+  </layout>
+ </widget>
+ <resources>
+  <include location="images.qrc"/>
+ </resources>
+ <connections/>
 </ui>
